add note on recommending not require approval for read-only action

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -53,7 +53,9 @@ Open the Integrations pane to see supported tools. Choose the software you’d l
 
 ![Integrations list](/images/integration_page.png)
 
-**Control integrations with precision**: When connecting a tool, choose exactly what actions Teamate can perform—and decide which ones require approval. You can mark tools as read-only without approvals, so when you interact with Teamate in Slack, it can take safe, streamlined actions on your behalf.
+**Control integrations with precision**: When connecting a tool, choose exactly what actions Teamate can perform—and decide which ones require approval. You can mark tools as read-only without approvals, so when you interact with Teamate in Slack, it can take safe, streamlined actions on your behalf. 
+
+**Note**, toggling on "Require Approval" will require user to approve that specific action. Sometimes, we find it easier to mark "read-only" operations not "Require Approval" to save users from having to approve actions too frequently. 
 
 ![Add integration configuration](/images/add_integration_example.png)
 
